Finsehd recomputing examples.

--- a/Fsing/TestIdealsPaper/TestIdeals.tex
+++ b/Fsing/TestIdealsPaper/TestIdeals.tex
@@ -167,7 +167,7 @@ In \autoref{ss: math behind} we describe the main ideas behind such computations
 
 \medskip
 {\small
-\setstretch{.7}
+\setstretch{.67}
 \begin{MyVerbatim}
 i1 : R = ZZ/5[x,y,z];
 
@@ -254,7 +254,7 @@ Here we compute two examples.
 
 \medskip
 {\small
-   \setstretch{.7}
+   \setstretch{.67}
 \begin{MyVerbatim}
 i1 : S = ZZ/5[x,y,z];
 
@@ -302,7 +302,7 @@ Let  $I\subseteq R$ be an ideal.
 
 \medskip
 {\small
-   \setstretch{.7}
+   \setstretch{.67}
 \begin{MyVerbatim}
 i1 : p = 3;
 
@@ -340,7 +340,7 @@ To illustrate, compare the computations above with the following.
 
 \medskip
 {\small
-   \setstretch{.7}
+   \setstretch{.67}
 \begin{MyVerbatim}
 i8 : S = ZZ/3[a..f,x,y];
 
@@ -389,7 +389,7 @@ yields a $p^{-1}$-linear map $U$ on $\Ext^2_R(R/ I, R)$.
 
 \medskip
 {\small
-   \setstretch{.7}
+   \setstretch{.67}
 \begin{MyVerbatim}
 i1 : R = ZZ/2[a,b,c,d];
 
@@ -433,7 +433,7 @@ $(\Image U)^{[1/p]}$ in $\Ext^2_R(R/ I, R)$
 as computed above is the whole of $R^2$.
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i7 : U = matrix entries E2;
 
@@ -465,7 +465,7 @@ given by $\Ann_{E^2} B^t$, where $B$ is the smallest submodule of $R^2$ containi
 The method \texttt{ascendModule} can be used to calculate  $B$ (see a detailed description of the similar method \texttt{ascendIdeal} in \autoref{Section: Test Ideals}).
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i10 : V = ascendModule(1, A, U)
 
@@ -555,7 +555,7 @@ The function \texttt{isFInjective} determines whether the ring $R = S/I$ is
 $F$-injective, where $S$ is a polynomial ring.
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i1 : R = ZZ/7[x,y,z]/(x^3 + y^3 + z^3);
 
@@ -621,7 +621,7 @@ can choose to check $F$-injectivity only at the origin by setting the
 option \texttt{IsLocal} to  \texttt{true}.
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i1 : R = ZZ/7[x,y,z]/((x - 1)^5 + (y + 1)^5 + z^5);
 
@@ -647,7 +647,7 @@ $F$-regular. Below are two examples, one of which is $F$-regular and the other o
 
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i1 : R = ZZ/5[x,y,z]/(x^2 + y*z);
 
@@ -666,7 +666,7 @@ o4 = false
 We can also check whether a pair $(R, f^t)$ is $F$-regular.
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i1 : R = ZZ/5[x,y];
 
@@ -731,7 +731,7 @@ Below are examples for both a ring and a pair.
 
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i1 : R = ZZ/7[x,y,z]/((x - 1)^3 + (y + 1)^3 + z^3);
 
@@ -769,7 +769,7 @@ Either a ring or a defining ideal can be input, as seen in the following example
 
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i1 : R = ZZ/5[x,y,z]/(x^2 + y*z);
 
@@ -819,7 +819,7 @@ $T_{R}(M^{1/p}) \subseteq M$.
 The command \texttt{isFRational} checks if a ring is $F$-rational.
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i1 : S = ZZ/3[a,b,c,d,t];
 
@@ -877,7 +877,7 @@ for some $e > 0$ (or equivalently for all $e > 0$).
 Using \emph{Macaulay2}, we can compute this using the \texttt{testModule} command as follows.
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i1 : R = ZZ/5[x,y,z]/(x^4 + y^4 + z^4);
 
@@ -908,7 +908,7 @@ The output of \texttt{testModule} is a sequence, consisting of three items:
 Note since this ring is Gorenstein, the canonical module is simply represented as the unit ideal. Here is another example, where the ring is not Gorenstein.
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i1 : R = ZZ/5[x,y,z]/(y*z, x*z, x*y);
 
@@ -985,7 +985,7 @@ where $I$ varies over ideals defined by a partial system of parameters, and $I^*
 In this example we repeat the calculation in \cite[\S 9]{KatzmanParameterTestIdealOfCMRings}.
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i1 : R = ZZ/2[a..e];
 
@@ -1049,7 +1049,7 @@ etc.
 Here is an example (a $\bZ/3\bZ$-quotient, where $3 | (7-1)$), where exactly this logic occurs.
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i1 : T = ZZ/7[x,y];
 
@@ -1072,10 +1072,10 @@ o6 : Ideal of R
 However, the term $u$ constructed above can be quite complicated if $e > 1$ (which happens exactly when $(p -1)K_R$ is not Cartier).  For instance, even in the above example we have an extremely complex $u$:
 
 \medskip
-{\small\setstretch{.7}
+{\small\setstretch{.67}
 \begin{MyVerbatim}
 i7 : toString QGorensteinGenerator(1, R)
-   
+
 o7 = a^2*b^6*c^12+a^3*b^4*c^13+a^3*b^5*c^11*d+a^4*b^3*c^12*d+a^5*b*c^13*d+b^
      12*c^6*d^2+a^3*b^6*c^9*d^2+a^4*b^4*c^10*d^2+a^5*b^2*c^11*d^2+a^6*c^12*d
      ^2+b^13*c^4*d^3+a*b^11*c^5*d^3+a^2*b^9*c^6*d^3+a^4*b^5*c^8*d^3+a^5*b^3*
@@ -1104,15 +1104,27 @@ Thus we directly compute $\tau(\omega_R, f^{1/n})$ via the command \texttt{testM
 
 \medskip
 {\small
+\setstretch{.67}
 \begin{MyVerbatim}
-i1 : T = ZZ/3[x,y];
-i2 : S = ZZ/3[a,b,c,d];
-i3 : f = map(T, S, {x^3, x^2*y, x*y^2, y^3});
-i4 : I = ker f;
-i5 : R = S/I;
-i6 : testIdeal R
-o6 = ideal 1
-o6 : Ideal of R
+i2 : T = ZZ/3[x,y];
+
+i3 : S = ZZ/3[a,b,c,d];
+
+i4 : f = map(T, S, {x^3, x^2*y, x*y^2, y^3});
+
+o4 : RingMap T <--- S
+
+i5 : I = ker f;
+
+o5 : Ideal of S
+
+i6 : R = S/I;
+
+i7 : testIdeal R
+
+o7 = ideal 1
+
+o7 : Ideal of R
 \end{MyVerbatim}
 }\medskip
 
@@ -1151,18 +1163,47 @@ The function \texttt{FPureModule} computes the stable submodule in this chain, c
 
 \medskip
 {\small
+\setstretch{.67}
 \begin{MyVerbatim}
-i1 : R = ZZ/3[x,y,z]/ideal( x^3 + y^4 + z^5 );
-i2 : L = FPureModule R;
-i3 : L#0
-                          2        2   3
-o3 = ideal (0, y*z, x*z, y , x*y, x , z )
-o3 : Ideal of R
-i4 : L#1
-o4 = ideal 1
+i2 : R = ZZ/3[x,y,z]/ideal( x^3 + y^4 + z^5 );
+
+i3 : L = FPureModule R;
+
+i4 : L#0
+
+                       2        2   3
+o4 = ideal (y*z, x*z, y , x*y, x , z )
+
 o4 : Ideal of R
-i5 : L#3
-o5 = 1
+
+i5 : L#1
+
+o5 = ideal 1
+
+o5 : Ideal of R
+
+i6 : L#3
+
+o6 = 1i2 : R = ZZ/3[x,y,z]/ideal( x^3 + y^4 + z^5 );
+
+i3 : L = FPureModule R;
+
+i4 : L#0
+
+                       2        2   3
+o4 = ideal (y*z, x*z, y , x*y, x , z )
+
+o4 : Ideal of R
+
+i5 : L#1
+
+o5 = ideal 1
+
+o5 : Ideal of R
+
+i6 : L#3
+
+o6 = 1
 \end{MyVerbatim}
 }\medskip
 
@@ -1209,18 +1250,29 @@ of the following examples.
 
 \medskip
 {\small
+\setstretch{.67}
 \begin{MyVerbatim}
-i1 : R = ZZ/2[x,y,z];
-i2 : f = x^3 + y^2*z + y*z^2;
-i3 : frobeniusPower(1/2, ideal f)
-o3 = ideal (x, y, z)
-o3 : Ideal of R
-i4 : u=f^3;
-i5 : frobeniusPower(1/4, ideal u)
-o6 = ideal (x, y, z)
+i2 : R = ZZ/2[x,y,z];
+
+i3 : f = x^3 + y^2*z + y*z^2;
+
+i4 : frobeniusPower(1/2, ideal f)
+
+o4 = ideal (z, y, x)
+
+o4 : Ideal of R
+
+i5 : u=f^3;
+
+i6 : frobeniusPower(1/4, ideal u)
+
+o6 = ideal (z, y, x)
+
 o6 : Ideal of R
+
 i7 : ((FPureModule(1, f))#3) + 1
-o7 : 2
+
+o7 = 2
 \end{MyVerbatim}
 }\medskip
 
@@ -1229,19 +1281,29 @@ shows a non-ordinary hyperelliptic curve of genus $2$ with level $2$.
 
 \medskip
 {\small
+\setstretch{.67}
 \begin{MyVerbatim}
-i1 : R = ZZ/11[x,y,z];
-i2 : f = y^2*z^3 - x^5 - 2*z^5;
-i3 : frobeniusPower(1/11, ideal f^10)
+i2 : R = ZZ/11[x,y,z];
+
+i3 : f = y^2*z^3 - x^5 - 2*z^5;
+
+i4 : frobeniusPower(1/11, ideal f^10)
+
              2        3
-o6 = ideal (z , x*z, x )
-o3 : Ideal of R
+o4 = ideal (z , x*z, x )
+
+o4 : Ideal of R
+
 i5 : frobeniusPower(1/121, ideal f^120)
+
              2        3
-o6 = ideal (z , x*z, x )
-o6 : Ideal of R
-i7 : ((FPureModule(1, f))#3) + 1
-o7 : 2
+o5 = ideal (z , x*z, x )
+
+o5 : Ideal of R
+
+i6 : ((FPureModule(1, f))#3) + 1
+
+o6 = 2
 \end{MyVerbatim}
 }\medskip
 
@@ -1278,12 +1340,17 @@ The method \texttt{compatibleIdeals} produces the finite set of $\phi$-compatibl
 
 \medskip
 {\small
+\setstretch{.67}
 \begin{MyVerbatim}
-i1 : R = ZZ/3[u,v];
-i2 : u = u^2*v^2;
-i3 : compatibleIdeals u
-o3 = {ideal v, ideal (v, u), ideal u}
-o3 : List
+i2 : R = ZZ/3[u,v];
+
+i3 : u = u^2*v^2;
+
+i4 : compatibleIdeals u
+
+o4 = {ideal v, ideal (v, u), ideal u}
+
+o4 : List
 \end{MyVerbatim}
 }\medskip
 
@@ -1305,16 +1372,24 @@ and the $p^1$-linear map $u \Theta$ on $\Ann_E I$, where $u$ is computed as foll
 
 \medskip
 {\small
+\setstretch{.67}
 \begin{MyVerbatim}
-i1 : R = ZZ/2[a..f];
-i2 : E = matrix {{a, b, b, e}, {d, d, c, a}};
+i2 : R = ZZ/2[a..f];
+
+i3 : E = matrix {{a, b, b, e}, {d, d, c, a}};
+
              2       4
-o2 : Matrix R  <--- R
-i3 : I = minors(2, E);
-o3 : Ideal of R
-i4 : S = R/I;
-i5 : isCohenMacaulay S
-o5 = true
+o3 : Matrix R  <--- R
+
+i4 : I = minors(2, E);
+
+o4 : Ideal of R
+
+i5 : S = R/I;
+
+i6 : isCohenMacaulay S
+
+o6 = true
 \end{MyVerbatim}
 }\medskip
 
@@ -1325,22 +1400,35 @@ where $\Omega \subseteq R$ is an ideal whose image in $R/I$ is a canonical modul
 
 \medskip
 {\small
+\setstretch{.67}
 \begin{MyVerbatim}
-i6 : omega = canonicalIdeal S
-o6 = ideal (e, d, a)
-o6 : Ideal of S
-i7 : omega = substitute(omega, R) + I;
-o7 : Ideal of R
-i8 : u = intersect((frobenius I):I, (frobenius omega) : omega);
+i7 : omega = canonicalIdeal S
+
+o7 = ideal (e, d, a)
+
+o7 : Ideal of S
+
+i8 : omega = substitute(omega, R) + I;
+
 o8 : Ideal of R
-i9 : u = compress((gens u) % gens(frobenius I))
-o9 = | a3bc+a3bd+a2cde+abcde+abd2e+b2d2e+cd2e2+d3e2 |
-             1       1
-o9 : Matrix R  <--- R
-i10 : u = first first entries u
+
+i9 : u = intersect((frobenius I):I, (frobenius omega) : omega);
+
+o9 : Ideal of R
+
+i10 : u = compress((gens u) % gens(frobenius I))
+
+o10 = | a3bc+a3bd+a2cde+abcde+abd2e+b2d2e+cd2e2+d3e2 |
+
+              1       1
+o10 : Matrix R  <--- R
+
+i11 :  u = first first entries u
+
        3       3       2                         2     2 2       2 2    3 2
-o10 = a b*c + a b*d + a c*d*e + a*b*c*d*e + a*b*d e + b d e + c*d e  + d e
-o10 : R
+o11 = a b*c + a b*d + a c*d*e + a*b*c*d*e + a*b*d e + b d e + c*d e  + d e
+
+o11 : R
 \end{MyVerbatim}
 }
 \medskip
@@ -1349,25 +1437,27 @@ Now we can compute all annihilators of $R$-submodules of $E$ stable under the $p
 
 \medskip
 {\small
+\setstretch{.67}
 \begin{MyVerbatim}
-i11 : L = compatibleIdeals u;
-i12 : print \ L;
-        3       3       2                         2     2 2       2 2    3 2
-ideal (a b*c + a b*d + a c*d*e + a*b*c*d*e + a*b*d e + b d e + c*d e  + d e )
+L = compatibleIdeals u;
+
+i13 : print \ L;
+       3       3       2                         2     2 2       2 2    3 2
+ideal(a b*c + a b*d + a c*d*e + a*b*c*d*e + a*b*d e + b d e + c*d e  + d e )
                2
 ideal (a + b, a  + d*e)
-ideal (d, a)
-ideal (d, a, e)
+ideal (e, a, d)
 ideal (e, d, a, c)
 ideal (e, d, c, b, a)
 ideal (e, d, b, a)
+ideal (e, b, a)
+ideal (e, b, a, c + d)
+                      2
+ideal (c + d, a + b, b  + d*e)
+ideal (d, a)
 ideal (d, a, c)
 ideal (d, c, b, a)
 ideal (d, b, a)
-                      2
-ideal (c + d, a + b, b  + d*e)
-ideal (c + d, b, a, e)
-ideal (b, a, e)
 \end{MyVerbatim}
 }
 \medskip
@@ -1376,22 +1466,23 @@ We can also compute  all annihilators of $R$-submodules of $H^2_{\mathfrak{m}} (
 
 \medskip
 {\small
+\setstretch{.67}
 \begin{MyVerbatim}
-i13 : print \ unique apply(L, J -> J : omega);
-        3       3       2                         2     2 2       2 2    3 2
-ideal (a b*c + a b*d + a c*d*e + a*b*c*d*e + a*b*d e + b d e + c*d e  + d e )
+ print \ unique apply(L, J -> J : omega);
+       3       3       2                         2     2 2       2 2    3 2
+ideal(a b*c + a b*d + a c*d*e + a*b*c*d*e + a*b*d e + b d e + c*d e  + d e )
                2
 ideal (a + b, b  + d*e)
-ideal (d, a)
 ideal (e, d, a)
 ideal 1
+ideal (e, b, a)
+ideal (e, c + d, b, a)
+                      2
+ideal (c + d, a + b, b  + d*e)
+ideal (d, a)
 ideal (d, c, a)
 ideal (d, c, b, a)
 ideal (d, b, a)
-                      2
-ideal (c + d, a + b, b  + d*e)
-ideal (e, c + d, b, a)
-ideal (e, b, a)
 \end{MyVerbatim}
 }
 \medskip
