--- a/Fsing/TestIdealsPaper/TestIdeals.tex
+++ b/Fsing/TestIdealsPaper/TestIdeals.tex
@@ -142,7 +142,7 @@ Algorithms for computing $F$-pure thresholds from \cite{HernandezFInvariantsOfDi
 \subsection*{Acknowledgements}
 The authors thank other contributors of the \texttt{TestIdeals.m2} package, namely
 Erin Bela, Juliette Bruce, Drew Ellingson, Matthew Mastroeni, and Maral Mostafazadehfard.
-This paper, and the finishing touches to the package \texttt{TestIdeals.m2}, were made at the University of Utah in 2018, and the visiting authors thank the Department of Mathematics for its hospitality.
+This paper, and the finishing touches to the package \texttt{TestIdeals.m2}, were made at the University of Utah in 2018, and the visiting authors thank the Department of Mathematics for its hospitality.  The authors also thank the referees for their numerous useful comments on both this paper and the code.
 
 \section{Frobenius powers and Frobenius roots}\label{Section: Frobenius powers and Frobenius roots}
 
@@ -1473,10 +1473,10 @@ We can also compute  all annihilators of $R$-submodules of $H^2_{\mathfrak{m}} (
 \setstretch{.67}
 \begin{MyVerbatim}
 i13 : print \ unique apply(L, J -> J : omega);
-   
+
        3       3       2                         2     2 2       2 2    3 2
 ideal(a b*c + a b*d + a c*d*e + a*b*c*d*e + a*b*d e + b d e + c*d e  + d e )
-       
+
                2
 ideal (a + b, b  + d*e)
 
